--- a/package.json
+++ b/package.json
@@ -50,10 +50,8 @@
     "IE 10"
   ],
   "lint-staged": {
-    "*.js": [
-    ],
-    "*.json": [
-    ]
+    "*.js": [],
+    "*.json": []
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
@@ -143,7 +141,7 @@
     "react-test-renderer": "16.8.6",
     "react-testing-library": "6.1.2",
     "rimraf": "2.6.3",
-    "shelljs": "^0.8.3",
+    "shelljs": "^0.8.5",
     "style-loader": "0.23.1",
     "stylelint": "10.0.1",
     "stylelint-config-recommended": "2.2.0",
