--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "react-boilerplate",
+  "name": "gt-sasami-client",
   "version": "4.0.0",
   "description": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
   "repository": {
     "type": "git",
-    "url": "git://github.com/react-boilerplate/react-boilerplate.git"
+    "url": "git://github.com/Tim-vo/gt-sasami-client.git"
   },
   "engines": {
     "npm": ">=5",
     "node": "16.13.0"
   },
-  "author": "Max Stoiber",
+  "author": "Tim VO",
   "license": "MIT",
   "scripts": {
     "analyze:clean": "rimraf stats.json",
