--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
     "express": "4.16.4",
+    "final-form": "^4.20.6",
     "fontfaceobserver": "2.1.0",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
@@ -76,16 +77,20 @@
     "react": "16.8.6",
     "react-burger-menu": "^3.0.6",
     "react-dom": "16.8.6",
+    "react-final-form": "^6.5.8",
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
+    "react-number-format": "^4.9.1",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
+    "recharts": "^2.1.9",
     "redux": "4.0.1",
     "redux-burger-menu": "^0.2.8",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "4.2.0"
+    "styled-components": "4.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
